<resources>
    <string name="app_name">Othello Sensei</string>
    <string name="new_game">New game</string>
    <string name="undo">Undo</string>

    <!-- Preferences -->
    <string name="stop_after_eval">Stop after (when evaluating)</string>
    <string name="stop_after_eval_default">1000000000000</string>

    <string name="use_book">Use book</string>
    <string name="use_book_default">false</string>

    <string name="delta_moves">Delta moves</string>
    <string name="delta_moves_default">2</string>
    <string name="delta_moves_summary">Spend 2x time on a move with score X than a move with score X-%s</string>

    <string name="stop_after_play">Stop after (when playing)</string>
    <string name="stop_after_play_default">10000000</string>

    <string name="error_when_playing">Error when playing</string>
    <string name="error_when_playing_default">15</string>

    <string name="copy_notes">Copy notes</string>
    <string name="add_to_notes">Add to notes</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_preferences">Settings</string>

</resources>
