<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/active"
        android:icon="@drawable/notifications_20px"
        android:title="Enable evaluations"
        app:showAsAction="always" />
    <item
        android:id="@+id/thor"
        android:icon="@drawable/baseline_archive_20"
        android:title="Load Thor"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/newGame"
        android:icon="@drawable/baseline_home_20"
        android:title="@string/new_game"
        app:showAsAction="always" />
    <item
        android:id="@+id/stop"
        android:icon="@drawable/baseline_cancel_18"
        android:title="Stop"
        app:showAsAction="always" />
    <item
        android:id="@+id/undo"
        android:icon="@drawable/baseline_arrow_back_20"
        android:title="@string/undo"
        app:showAsAction="always" />
    <item
        android:id="@+id/set_first_position"
        android:title="Set first position" />
    <item
        android:id="@+id/reset_first_position"
        android:title="Reset first position" />
    <item
        android:id="@+id/copy_notes"
        android:title="@string/copy_notes" />
    <item
        android:id="@+id/add_to_notes"
        android:title="@string/add_to_notes" />
    <item
        android:id="@+id/action_settings"
        app:showAsAction="never"
        android:title="Settings">
    </item>
</menu>